fix 'report button' overflowing in floating action menu - sub menu

--- a/src/routes/landing/landing.less
+++ b/src/routes/landing/landing.less
@@ -523,6 +523,20 @@ div.buttons:not(:last-child):nth-last-child(4) {
   left: 0;
   bottom: 0;
 }
+.reportFireBtn {
+  position: absolute;
+  top: 153px;
+  right: 0;
+  left: 0;
+  bottom: 0;
+}
+.reportWindBtn {
+  position: absolute;
+  top: 145px;
+  right: 0;
+  left: 0;
+  bottom: 0;
+}
 .reportHazeBtn {
   position: absolute;
   top: 220px;
